Minimum Score After Removals on a Tree